# The-Ages-II

./: .gitignore  CLAUDE.md  Makefile  README.md  THE_AGES_SERVER_PLAN.md  pyproject.toml  run.py
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-1-project-scaffolding-and-configuration.md  1-2-database-engine-and-base-models.md  1-3-persistence-repositories.md  1-4-tile-system-and-room-instance.md  1-5-websocket-connection-and-message-routing.md  1-6-player-registration.md  1-7-player-login-and-room-entry.md  1-8-game-orchestrator-and-server-lifecycle.md  10-1-player-logout.md  10-2-non-walkable-interactive-objects.md  10-3-slash-command-parser.md  10-4-server-query-actions.md  (+118 more)
alembic/: env.py
scripts/: generate_protocol_doc.py
server/: app.py  cli.py
tests/: conftest.py  test_admin.py  test_auth.py  test_blocking_objects.py  test_cards.py  test_chat.py  test_chest.py  test_cli.py  test_combat.py  test_combat_effects.py  test_combat_entry.py  test_combat_flee.py  test_combat_multiplayer.py  test_combat_resolution.py  test_concurrency.py  test_database.py  test_dot_effects.py  test_effects.py  test_events.py  test_exploration_xp.py  test_game.py  test_grace_period.py  test_heartbeat.py  test_inbound_schemas.py  test_integration.py  test_interact.py  test_interaction_xp.py  test_inventory.py  test_inventory_persistence.py  test_item_usage.py  test_items.py  test_level_up.py  test_lever.py  test_login.py  test_logout.py  test_loot.py  test_map.py  test_migration.py  test_movement.py  test_msg_seq.py  (+23 more)
web-demo/: index.html  jsconfig.json
(+149 files in other folders)
